# randomanswer-qml

./: Asker.qml  CMakeLists.txt  Questions.qml  README.md  RandomAnswer.qrc  main.cpp  randomanswer.desktop
